src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt;= 100,
&quot;A&quot;,
IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c,
&quot;B&quot;,
IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c,
&quot;C&quot;,
IF(0 &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c,
&quot;D&quot;,
&quot;&quot;
)
)
)
)</formula>
        <label>Company Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Score__c</fullName>
        <label>Company Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_1__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt;= 100,
	&quot;A&quot;,
	IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_2__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_1__c,
		&quot;B&quot;,
		IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_3__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_2__c,
			&quot;C&quot;,
			IF(0 &lt;= ES_Person_Engagement_Score__c &amp;&amp; ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_3__c,
				&quot;D&quot;,
				&quot;&quot;
			)
		)
	)
)</formula>
        <label>Contact Engagement Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Score__c</fullName>
        <label>Contact Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_1__c &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt;= 100,
&quot;A&quot;,
IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_2__c &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_1__c,
&quot;B&quot;,
IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_3__c &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_2__c,
&quot;C&quot;,
IF(0 &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_3__c,
&quot;D&quot;,
&quot;&quot;
)
)
)
)</formula>
        <label>Contact Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Score__c</fullName>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>